# api-bones

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  lcov.info  lcov2.info  mempalace.yaml
.cargo/: config.toml
.gitea/workflows/: ci.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  tag.yml
api-bones-axios/: CHANGELOG.md  package-lock.json  package.json  tsconfig.json
api-bones-axios/src/: index.test.ts  index.ts
api-bones-progenitor/: Cargo.toml
api-bones-progenitor/src/: lib.rs
api-bones-reqwest/: Cargo.toml  README.md
api-bones-reqwest/examples/: client_extensions.rs
api-bones-reqwest/src/: lib.rs
api-bones-sdk-gen/: CHANGELOG.md  Cargo.toml
api-bones-sdk-gen/src/: main.rs
api-bones-sdk-gen/templates/: rust-Cargo.toml.tmpl  rust-build.rs.tmpl
api-bones-test/: Cargo.toml
api-bones-test/src/: lib.rs
api-bones-test/src/axum/: assertions.rs  mod.rs  server.rs
api-bones-test/src/builders/: etag.rs  mod.rs  org_context.rs  paginated.rs  principal.rs  problem.rs  response.rs
api-bones-test/src/nats/: capture.rs  mod.rs
api-bones-test/src/reqwest/: assertions.rs  mod.rs
api-bones-test/tests/: axum_assertions.rs  builders.rs  nats_capture.rs  reqwest_assertions.rs
api-bones-tower/: Cargo.toml  README.md
api-bones-tower/examples/: problem_json.rs  request_id.rs
api-bones-tower/src/: lib.rs
docs/: DESIGN-pagination.md  adr-manifest.toml
docs/adr/: README.md
examples/: audit.rs  auth_flow.rs  axum_core_extractors.rs  axum_error_handling.rs  axum_extractors_and_ratelimit.rs  bulk_envelope.rs  bulk_operations.rs  cache_control.rs  common_types.rs  comprehensive.rs  cursor_hmac.rs  error_construction.rs  error_handling.rs  etag.rs  etag_conditional.rs  hateoas_links.rs  header_parser.rs  health_check.rs  org_context.rs  pagination.rs  problem_json.rs  query_builder.rs  query_params.rs  range_headers.rs  rate_limit.rs  response_envelope.rs  slug.rs  trace_context.rs
features/: pagination.feature
src/: audit.rs  auth.rs  axum_extractors.rs  bulk.rs  cache.rs  calendar.rs  common.rs  content_type.rs  correlation_id.rs  cors.rs  cursor.rs  deprecated.rs  error.rs  etag.rs  fake_impls.rs  has_id.rs  header.rs  header_id.rs  health.rs  idempotency.rs  lib.rs  links.rs  method.rs  models.rs  openapi.rs  org_context.rs  org_id.rs  pagination.rs  query.rs  range.rs  ratelimit.rs  request_id.rs  reqwest_ext.rs  response.rs  retry.rs  slug.rs  status.rs  tower_middleware.rs  traceparent.rs  url.rs  (+2 more)
src/serde/: base64_bytes.rs  json_string.rs  maybe_string.rs  mod.rs  timestamp.rs
tests/: arbitrary_smoke.rs  fake_smoke.rs  version_display.rs
