[package]
name = "api-bones"
version = "1.7.0"
edition = "2024"
authors = ["Gregoire Salingue"]
license = "LicenseRef-Proprietary"
description = "Opinionated REST API types: errors (RFC 9457), pagination, health checks, and more"
repository = "https://git.brefwiz.com/gsalingu/api-bones"
publish = ["brefwiz"]

[features]
default = ["std", "serde", "uuid", "chrono", "validator"]
## Enables `std`-dependent types (`HashMap`, `std::error::Error`, etc.).
## Disabling this switches the crate to `#![no_std]` mode; pair with `alloc`
## for heap-allocated types (`String`, `Vec`, `Arc`).
std = ["alloc", "thiserror/std"]
## Enables heap-allocated types (`String`, `Vec`, `Arc`) in `no_std` contexts.
alloc = []
serde = ["dep:serde", "dep:serde_json", "dep:serde_with", "uuid?/serde", "chrono?/serde"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono", "utoipa?/chrono"]
http = ["dep:http"]
axum = ["dep:axum", "http", "serde"]
utoipa = ["dep:utoipa"]
icalendar = ["dep:icalendar"]
validator = ["dep:validator"]
arbitrary = ["dep:arbitrary", "uuid?/arbitrary"]
proptest = ["dep:proptest", "dep:proptest-derive"]
fake = ["dep:fake", "dep:rand"]
schemars = ["dep:schemars", "schemars/uuid1", "schemars/chrono"]

[dependencies]
thiserror = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.8", optional = true }
uuid = { version = "1.8", features = ["v4"], optional = true }
chrono = { version = "0.4", optional = true }
arbitrary = { version = "1", features = ["derive"], optional = true }
proptest = { version = "1", optional = true }
proptest-derive = { version = "0.5", optional = true }
axum = { version = "0.8", optional = true }
http = { version = "1.0", optional = true }
utoipa = { version = "5", optional = true, features = ["uuid", "chrono"] }
icalendar = { version = "0.17", features = ["parser", "serde"], optional = true }
validator = { version = "0.19", features = ["derive"], optional = true }
fake = { version = "2", optional = true }
rand = { version = "0.8", optional = true }
schemars = { version = "0.8", optional = true }

[lints.rust]
# PLATFORM-008: Zero-Tolerance Security Linting
unsafe_code = { level = "deny", priority = -1 }
unsafe_op_in_unsafe_fn = { level = "deny", priority = -1 }
warnings = { level = "deny", priority = -1 }
unused_imports = { level = "deny", priority = -1 }
unused_variables = { level = "deny", priority = -1 }
dead_code = { level = "deny", priority = -1 }

[lints.clippy]
# PLATFORM-008: Tier 3 — pedantic linting at deny level
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Selective allow-list (justified below)
missing_errors_doc = "allow"   # serde/helper fns — noise without benefit
missing_panics_doc = "allow"   # no panic paths in public API
module_name_repetitions = "allow"    # e.g. ErrorCode, ApiError — idiomatic
missing_const_for_fn = "allow"       # nursery: not stable across MSRV, adds no safety value here
derive_partial_eq_without_eq = "allow" # nursery: serde types are rarely fully Eq-hashable
option_if_let_else = "allow"         # nursery: map_or_else is less readable in match-heavy code

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net"] }

[[example]]
name = "axum_error_handling"
required-features = ["axum"]

[[example]]
name = "audit"

[[example]]
name = "bulk_operations"

[[example]]
name = "common_types"

[[example]]
name = "error_handling"

[[example]]
name = "etag"

[[example]]
name = "hateoas_links"

[[example]]
name = "health_check"

[[example]]
name = "pagination"

[[example]]
name = "query_params"

[[example]]
name = "rate_limit"

[[example]]
name = "response_envelope"

[[example]]
name = "slug"
