[package]
name = "api-bones-progenitor"
version = "0.1.1"
edition = "2024"
authors = ["Gregoire Salingue"]
license = "MIT"
description = "Build-time helpers for generating progenitor Rust SDKs with transparent ApiResponse envelope stripping"
repository = "https://github.com/brefwiz/api-bones"

[dependencies]
progenitor = "0.13"
openapiv3 = "2"
serde_json = "1"
anyhow = "1"
