[package]
name = "api-bones-sdk-gen"
version = "4.4.0"
edition = "2024"
authors = ["Gregoire Salingue"]
license = "MIT"
description = "CLI for generating Brefwiz Rust + TypeScript SDKs with default-on ApiResponse envelope handling"
repository = "https://github.com/brefwiz/api-bones"

[[bin]]
name = "api-bones-sdk-gen"
path = "src/main.rs"

[dependencies]
api-bones-progenitor = { path = "../api-bones-progenitor", version = "4.4" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
